--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,8 @@
   border: none;
   background: none;
   box-sizing: border-box;
+
+  transition: background-color 0.5s ease, color 0.5s ease, fill 0.5s ease, stroke 0.5s ease, border-color 0.5s ease;
 }
 
 body {
